[project]
name = "base-agent"
version = "0.1.0"
description = "ADK Base Agent: made a template for all your adk needs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "immutabledict>=4.3.1",
    "sqlglot>=29.0.1",
    "db-dtypes>=1.5.0",
    "regex>=2026.2.28",
    "tabulate>=0.10.0",
    "google-cloud-aiplatform[adk,agent-engines]==1.141.0",
    "absl-py>=2.4.0",
    "pydantic>=2.12.5",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.4.3",
    "toolbox-core>=0.6.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "pg8000>=1.31.5",
    "pip>=26.0.1",
    "google-adk==1.26.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "pymupdf>=1.27.2",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "google-cloud-aiplatform[adk,agent-engines,evaluation]==1.141.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "google-adk[eval]==1.26.0",
    "black>=26.3.1",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "base_agent"
module-root = ""

[tool.pytest.ini_options]
# This section is for pytest configuration and does not need to be changed.
console_output_style = "progress"
addopts = "-vv -s"
#addopts = "-vv -s --pdb"
testpaths = ["tests/"]
log_level = "DEBUG"
log_cli = true
log_auto_indent = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = [
    #"error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    #'ignore:function ham\(\) is deprecated:DeprecationWarning',
]